--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean:reports": "rimraf allure-report allure-results && mkdirp allure-report allure-results",
     "generate:reports": "npx allure generate ./allure-results --clean",
     "open:reports": "npx allure open ./allure-report",
-    "pretest": "npm install && .\\node_modules\\.bin\\playwright.cmd install --force && npm run clean:reports",
+    "pretest": ".\\node_modules\\.bin\\playwright.cmd install --force && npm run clean:reports",
     "posttest": "npm run generate:reports",
     "execute:script": "npx playwright test PageObjectModelTest --project=chromium",
     "test": "npm run execute:script || npm run posttest"
