--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean:reports": "rimraf allure-report allure-results && mkdirp allure-report allure-results",
-    "generate:reports": "npx allure generate ./allure-results --clean",
+    "generate:reports": "npx allure generate allure-results --clean -o allure-report",
     "open:reports": "npx allure open ./allure-report",
     "pretest": ".\\node_modules\\.bin\\playwright.cmd install --force && npm run clean:reports",
     "posttest": "npm run generate:reports",
