--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "generate:reports": "npx allure generate allure-results --clean -o allure-report",
     "open:reports": "npx allure open ./allure-report",
     "pretest": ".\\node_modules\\.bin\\playwright.cmd install --force && npm run clean:reports",
-    "posttest": "npm run generate:reports",
-    "execute:script": "npx playwright test PageObjectModelTest --project=chromium",
-    "test": "npm run execute:script || npm run posttest"
+    "execute:script": "npx playwright test  --project=chromium",
+    "test": "npm run execute:script || npm run generate:reports"
   },
   "keywords": [],
   "author": "",
