--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,5 @@ services:
     build: .
     container_name: playwright-container
     volumes:
-      - - ./:/app
-      - ./allure-results:/app/allure-results
-      - ./allure-report:/app/allure-report
+      - allure-results:/app/allure-results
+      - allure-report:/app/allure-report
