--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,9 @@
+version: '3.8'
+
 services:
   playwright-test:
-    image: playwright
     build: .
     container_name: playwright-container
     volumes:
-      - allure-results:/app/allure-results
-      - allure-report:/app/allure-report
-
-volumes:
-  allure-results:
-  allure-report:
+      - ./allure-results:/app/allure-results
+      - ./allure-report:/app/allure-report
