--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean:reports": "rimraf allure-report/* allure-results/*",
+    "clean:reports": "del-cli ./allure-report/** ./allure-results/**",
     "generate:reports": "npx allure generate allure-results --clean -o allure-report",
     "open:reports": "npx allure open ./allure-report",
-    "pretest": "npm run clean:reports",
-    "execute:script": "npx playwright test  --project=chromium",
-    "test": "npm run execute:script; npm run generate:reports"
+    "execute:script": "npx playwright test --project=chromium",
+    "test": "npm run clean:reports && npm run execute:script; npm run generate:reports"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +19,7 @@
     "allure-commandline": "^2.34.1",
     "allure-playwright": "^2.15.1",
     "csv-parse": "^5.5.0",
+    "del-cli": "^7.0.0",
     "luxon": "^3.4.3",
     "mkdirp": "^3.0.1",
     "rimraf": "^5.0.10"
