--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   playwright-test:
     build: .
+    user: root
     container_name: playwright-container
     volumes:
       - ./allure-results:/app/allure-results
