--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,6 @@ services:
     volumes:
       - ./allure-results:/app/allure-results
       - ./allure-report:/app/allure-report
+      
+    command: npm run test
 
