--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "generate:reports": "npx allure generate allure-results --clean -o allure-report",
     "open:reports": "npx allure open ./allure-report",
     "execute:script": "npx playwright test --project=chromium",
-    "test": "npm run clean:reports && npm run execute:script; npm run generate:reports"
+    "test": "npm run clean:reports && npm run execute:script",
+    "posttest": "npm run generate:reports"
   },
   "keywords": [],
   "author": "",
