--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ services:
     user: root
     container_name: playwright-container
     volumes:
-      - ./allure-results:/app/allure-results
-      - ./allure-report:/app/allure-report
-      
+      - ./:/app/
+
     command: npm run test
 
