--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean:reports": "rimraf allure-report allure-results || true && mkdirp allure-report allure-results",
+    "clean:reports": "del-cli allure-results/*",
     "generate:reports": "npx allure generate allure-results --clean -o allure-report",
     "open:reports": "npx allure open ./allure-report",
     "execute:script": "npx playwright test --project=chromium",
-    "test": "npm run clean:reports && npm run execute:script",
-    "posttest": "npm run generate:reports"
+    "test": "npm run clean:reports && npm run execute:script; npm run generate:reports"
   },
   "keywords": [],
   "author": "",
