--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     user: root
     container_name: playwright-container
     volumes:
-      - ./:/app
+      - ./allure-report:/app/allure-report
 
     command: npm run test
 
