changes in integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: playwright-container
     volumes:
       - ./allure-report:/app/allure-report
+      - ./allure-results:/app/allure-results
 
     command: npm run test
 
