--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean:reports": "rm -rf  allure-results",
+    "clean:reports": "rm -rf  allure-results allure-report",
     "generate:reports": "npx allure generate allure-results --clean -o allure-report",
     "open:reports": "npx allure open ./allure-report",
     "execute:script": "npx playwright test --project=chromium",
