changes in integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     user: root
     container_name: playwright-container
     volumes:
-      - allure-report:/app/allure-report
+      - ./allure-report:/app/allure-report
       - allure-results:/app/allure-results
 
     command: npm run test
