--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "docker:local": "docker-compose -f docker-compose.yml up --build --abort-on-container-exit --exit-code-from playwright-test && docker cp playwright-container:/app/allure-report ./allure-report && docker cp playwright-container:/app/allure-results ./allure-results",
-    "clean:reports": "rm -rf  allure-results/*",
+    "clean:reports": "rimraf allure-report/* allure-results/*",
     "generate:reports": "npx allure generate allure-results --clean -o allure-report",
     "open:reports": "npx allure open ./allure-report",
     "execute:script": "npx playwright test --project=chromium",
