--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
       # Paso 4: Extraer los informes de Allure después de que el contenedor termine
       - name: Copy Allure reports from volume
         run: |
-          cp -r /var/lib/docker/volumes/allure-report/_data /home/runner/work/playwright-demo-jenkins/playwright-demo-jenkins/allure-report
-          cp -r /var/lib/docker/volumes/allure-results/_data /home/runner/work/playwright-demo-jenkins/playwright-demo-jenkins/allure-results
+          docker cp playwright-container:/app/allure-report ./allure-report
+          docker cp playwright-container:/app/allure-results ./allure-results
 
 
       # Paso 5: Limpiar los contenedores Docker
