--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           path: ./allure-report
 
 
-  # Nuevo job para publicar el informe en GitHub Pages
+  # Nuevo job para publicar el informe en GitHub Pages.
   deploy:
     runs-on: ubuntu-latest  # Usar Ubuntu
 
