--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,8 +69,8 @@ jobs:
     # Paso 3: Configurar git y realizar commit y push a la rama gh-pages
     - name: Push Allure Report to GitHub Pages
       run: |
-        git config --global user.email "youremail@example.com"
-        git config --global user.name "Your Name"
+        git config --global user.email "criscano-14@hotmail.com"
+        git config --global user.name "criscano-14"
         git add -A
         git commit -m "Publish Allure Report"
         git push origin gh-pages  # Hacer push a la rama gh-pages
