--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,37 +40,19 @@ jobs:
         run: |
           docker-compose -f docker-compose.yml down --volumes --remove-orphans
 
-      # Paso 6: Publicar el informe de Allure
-      - name: Publish Allure report
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: ./allure-report
-
-
-  # Nuevo job para publicar el informe en GitHub Pages.
-  deploy:
+  # Nuevo job para visualizar el reporte de Allure
+  show_allure_report:
     runs-on: ubuntu-latest  # Usar Ubuntu
-    needs: build
+    needs: build  # Este job necesita que el job `build` haya terminado correctamente
 
     steps:
     # Paso 1: Checkout del código
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Paso 2: Subir los informes de Allure a GitHub Pages
-    - name: Set up GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    # Paso 2: Usar la acción `didstopia/allure-action` para renderizar el reporte de Allure
+    - name: Show Allure Report
+      uses: didstopia/allure-action@v2
       with:
-        publish_dir: ./allure-report  # Carpeta con el informe de Allure
-        publish_branch: gh-pages  # Publicar en la rama gh-pages
-        github_token: ${{ secrets.GH_TOKEN }}  # Usar el token de GitHub para autenticación
-
-    # Paso 3: Configurar git y realizar commit y push a la rama gh-pages
-    - name: Push Allure Report to GitHub Pages
-      run: |
-        git config --global user.email "criscano-14@hotmail.com"
-        git config --global user.name "criscano-14"
-        git add -A
-        git commit -m "Publish Allure Report"
-        git push origin gh-pages  # Hacer push a la rama gh-pages
+        allure-results: ./allure-results  # Ruta de los resultados de Allure
+        allure-report: ./allure-report    # Ruta donde se genera el informe de Allure
