--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,13 +46,26 @@ jobs:
     needs: build  # Este job necesita que el job `build` haya terminado correctamente
 
     steps:
-    # Paso 1: Checkout del código
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    # Paso 2: Usar la acción `didstopia/allure-action` para renderizar el reporte de Allure
-    - name: Show Allure Report
-      uses: didstopia/allure-action@v2
+    - name: Load test report history
+      uses: actions/checkout@v3
+      if: always()
+      continue-on-error: true
       with:
-        allure-results: ./allure-results  # Ruta de los resultados de Allure
-        allure-report: ./allure-report    # Ruta donde se genera el informe de Allure
+        ref: gh-pages
+        path: gh-pages
+
+    - name: Build test report
+      uses: simple-elf/allure-report-action@v1.7
+      if: always()
+      with:
+        gh_pages: gh-pages
+        allure_history: allure-history
+        allure_results: ./allure-results
+
+    - name: Publish test report
+      uses: peaceiris/actions-gh-pages@v3
+      if: always()
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_branch: gh-pages
+        publish_dir: allure-history
