--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
       with:
         gh_pages: gh-pages
         allure_history: allure-history
-        allure_results: ./allure-results
+        allure_results: build/allure-results
 
     - name: Publish test report
       uses: peaceiris/actions-gh-pages@v3
